<?xml version="1.0"?>
<package format="2">
  <name>fkie_iop_costmap2d</name>
  <version>1.1.0</version>
  <description>ROS costmap is translated by this service to the JAUS network</description>
  <author>Alexander Tiderko</author>
  <maintainer email="alexander.tiderko@fkie.fraunhofer.de">Alexander Tiderko</maintainer>
  <license>GPLv2</license>
  <url type="website">https://github.com/fkie/iop_sensing</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>fkie_iop_accesscontrol</depend>
  <depend>fkie_iop_component</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
    <fkie_iop_component plugin="${prefix}/plugin_iop.xml" />
  </export>

</package>
