<?xml version="1.0"?>
<package format="2">
  <name>fkie_iop_path_reporter</name>
  <version>1.1.0</version>
  <description>Service provides a mechanism for reporting the past and/or future expected path of the vehicle.</description>

  <author>Alexander Tiderko</author>
  <maintainer email="alexander.tiderko@fkie.fraunhofer.de">Alexander Tiderko</maintainer>
  <license>GPLv2</license>
  <url type="website">https://github.com/fkie/iop_sensing</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>gps_common</depend>
  <depend>geographic_msgs</depend>
  <depend>fkie_iop_component</depend>
  <depend>fkie_iop_events</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>

  <export>
    <fkie_iop_component plugin="${prefix}/plugin_iop.xml" />
  </export>

</package>
