<?xml version="1.0"?>
<package>
  <name>iop_costmap2d_fkie</name>
  <version>1.1.0</version>
  <description>ROS costmap is translated by this service to the JAUS network</description>
  <maintainer email="alexander.tiderko@fkie.fraunhofer.de">Alexander Tiderko</maintainer>
  <license>GPLv2</license>
  <url type="website">https://github.com/fkie/iop_sensing</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>iop_accesscontrol_fkie</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>iop_accesscontrol_fkie</run_depend>
  <run_depend>iop_component_fkie</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
    <iop_component_fkie plugin="${prefix}/plugin_iop.xml" />
  </export>

</package>