<?xml version="1.0"?>
<package format="2">
  <name>iop_costmap2d_fkie</name>
  <version>1.1.0</version>
  <description>ROS costmap is translated by this service to the JAUS network</description>
  <author>Alexander Tiderko</author>
  <maintainer email="alexander.tiderko@fkie.fraunhofer.de">Alexander Tiderko</maintainer>
  <license>GPLv2</license>
  <url type="website">https://github.com/fkie/iop_sensing</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>iop_accesscontrol_fkie</depend>
  <depend>iop_component_fkie</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
    <iop_component_fkie plugin="${prefix}/plugin_iop.xml" />
  </export>

</package>
